--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.background-image {
+  background-image: ""
+}
+
+.body {
+  background-color: red;
+}
